tests/ui/rfcs/rfc-2294-if-let-guard/guard-mutability-2.stderr
error[E0596]: cannot borrow `y.0` as mutable, as it is immutable for the pattern guard
  --> $DIR/guard-mutability-2.rs:8:37
   |
LL |         Some(ref mut y) if let Some(ref mut z) = *y => {
   |                                     ^^^^^^^^^ cannot borrow as mutable
   |
   = note: variables bound in patterns are immutable until the end of the pattern guard

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
